<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customfood.CustomFoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:id="@+id/tvCustomFoodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/custom_food"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/calories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCustomFoodTitle" />

        <SeekBar
            android:id="@+id/sbCalories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCalories"
            android:max="2000"/>

        <TextView
            android:id="@+id/quantityCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCalories"/>

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCalories" />

        <SeekBar
            android:id="@+id/sbFat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFat"
            android:max="100"/>

        <TextView
            android:id="@+id/quantityFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fat_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbFat"/>

        <TextView
            android:id="@+id/tvSaturatedFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/saturated_fat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityFat" />

        <SeekBar
            android:id="@+id/sbSaturatedFat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSaturatedFat"
            android:max="13"/>

        <TextView
            android:id="@+id/quantitySaturatedFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturatedfat_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSaturatedFat"/>

        <TextView
            android:id="@+id/tvCholestrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cholestrol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySaturatedFat" />

        <SeekBar
            android:id="@+id/sbCholestrol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCholestrol"
            android:max="300"/>

        <TextView
            android:id="@+id/quantityCholestrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cholestrol_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCholestrol"/>

        <TextView
            android:id="@+id/tvSodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sodium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCholestrol" />

        <SeekBar
            android:id="@+id/sbSodium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSodium"
            android:max="2300"/>

        <TextView
            android:id="@+id/quantitySodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sodium_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSodium"/>

        <TextView
            android:id="@+id/tvCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/carbohydrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySodium" />

        <SeekBar
            android:id="@+id/sbCarbohydrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCarbohydrate"
            android:max="325"/>

        <TextView
            android:id="@+id/quantityCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrate_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbCarbohydrate"/>

        <TextView
            android:id="@+id/tvFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fiber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityCarbohydrate" />

        <SeekBar
            android:id="@+id/sbFiber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFiber"
            android:max="40"/>

        <TextView
            android:id="@+id/quantityFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiber_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbFiber"/>

        <TextView
            android:id="@+id/tvSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sugar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityFiber" />

        <SeekBar
            android:id="@+id/sbSugar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSugar"
            android:max="40"/>

        <TextView
            android:id="@+id/quantitySugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbSugar"/>

        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/protein"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantitySugar" />

        <SeekBar
            android:id="@+id/sbProtein"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProtein"
            android:max="200"/>

        <TextView
            android:id="@+id/quantityProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein_quantity"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sbProtein"/>

        <Button
            android:id="@+id/btnGetMealsSugesstion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/quantityProtein"
            android:layout_marginTop="40dp"
            android:text="@string/get_meals_suggestion"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>